Rewrite loop analysis using a proper gammar.
Also, in the process:
- add support of reader comments
- add support for #=, ##, #o, #: and #.
- fix: toplevel feature expressions were ignored
- a symbol can't start with #.